Redirecting Angular article to Tinci Blog

--- a/article/apprendre-angular-en-un-jour-le-guide-ultime/index.html
+++ b/article/apprendre-angular-en-un-jour-le-guide-ultime/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html lang="fr"><head><meta http-equiv="refresh" content="URL=http://tinci.fr/blog/apprendre-angular-en-un-jour-le-guide-ultime"></head><body></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta http-equiv="refresh" content="0;URL=http://tinci.fr/blog/apprendre-angular-en-un-jour-le-guide-ultime">
+  </head>
+  <body>
+    Cet article est maintenant disponible sur <a href="http://tinci.fr/blog/apprendre-angular-en-un-jour-le-guide-ultime">Le Blog Tinci</a>
+  </body>
+</html>
